--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
   </head>
-  <body ng-app="torrentSubscribeFrontendApp">
+  <body ng-app="torrentSubscribeFrontendApp" ng-controller="MainCtrl">
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
@@ -39,7 +39,9 @@
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
             <ul class="nav navbar-nav">
-              <li class="active"><a href="#/">Home</a></li>
+              <li ng-repeat="page in pages" ng-class="{'active':isCurrent(page.path)}">
+                  <a ng-click="go(page.path)">{{page.title}}</a>
+              </li>
             </ul>
           </div>
         </div>
@@ -47,7 +49,6 @@
     </div>
 
     <div class="container">
-      <!-- <div ng-include="'views/main.html'" ng-controller="MainCtrl"></div> -->
       <div ng-view></div>
     </div>
 
@@ -83,6 +84,7 @@
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/main.js"></script>
+    <script src="scripts/controllers/search.js"></script>
     <script src="scripts/services/Torrents.js"></script>
     <script src="scripts/services/TorrentClient.js"></script>
     <script src="scripts/controllers/client.js"></script>
