Adding download types so user can request to save in preset directories

--- a/app/index.html
+++ b/app/index.html
@@ -91,6 +91,7 @@
     <script src="scripts/controllers/test.js"></script>
     <script src="scripts/filters/bytes.js"></script>
     <script src="scripts/constants.js"></script>
+    <script src="scripts/directives/add-torrent-modal.js"></script>
     <!-- endbuild -->
 </body>
 </html>
