Add default download type

--- a/app/scripts/directives/add-torrent-modal-dialog.html
+++ b/app/scripts/directives/add-torrent-modal-dialog.html
@@ -10,8 +10,9 @@
             <div class="modal-body">
                 <form>
                     <div class="form-group">
-                        <label for="torrent-location" class="control-label">Location:</label>
+                        <label for="torrent-location" class="control-label">Type:</label>
                         <select class="form-control" id="torrent-type" ng-model="type">
+                            <option value="default">Default</option>
                             <option value="movie">Movie</option>
                             <option value="tvshow">TV Show</option>
                             <option value="game">Game</option>
