--- a/app/index.html
+++ b/app/index.html
@@ -78,6 +78,7 @@
     <script src="bower_components/angular-resource/angular-resource.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
+    <script src="bower_components/moment/moment.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -92,6 +93,7 @@
     <script src="scripts/filters/bytes.js"></script>
     <script src="scripts/constants.js"></script>
     <script src="scripts/directives/add-torrent-modal.js"></script>
+    <script src="scripts/filters/date.js"></script>
     <!-- endbuild -->
 </body>
 </html>
