Show the amount of free space for each download directory

--- a/app/index.html
+++ b/app/index.html
@@ -94,6 +94,8 @@
     <script src="scripts/constants.js"></script>
     <script src="scripts/directives/add-torrent-modal.js"></script>
     <script src="scripts/filters/date.js"></script>
+    <script src="scripts/directives/freespace.js"></script>
+    <script src="scripts/services/freespace.js"></script>
     <!-- endbuild -->
 </body>
 </html>
