--- a/app/index.html
+++ b/app/index.html
@@ -79,8 +79,11 @@
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/moment/moment.js"></script>
+    <script src="bower_components/underscore/underscore.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
+
+    <script src="socket.io/socket.io.js"></script>
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="scripts/app.js"></script>
@@ -95,6 +98,7 @@
     <script src="scripts/filters/date.js"></script>
     <script src="scripts/directives/freespace.js"></script>
     <script src="scripts/services/freespace.js"></script>
+    <script src="scripts/services/socket.js"></script>
     <!-- endbuild -->
 </body>
 </html>
