--- a/app/index.html
+++ b/app/index.html
@@ -79,8 +79,8 @@
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/moment/moment.js"></script>
-    <script src="bower_components/underscore/underscore.js"></script>
     <script src="bower_components/ngstorage/ngStorage.js"></script>
+    <script src="bower_components/lodash/lodash.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -100,6 +100,8 @@
     <script src="scripts/directives/freespace.js"></script>
     <script src="scripts/services/freespace.js"></script>
     <script src="scripts/services/socket.js"></script>
+    <script src="scripts/services/file.js"></script>
+    <script src="scripts/controllers/files.js"></script>
     <!-- endbuild -->
 </body>
 </html>
