--- a/app/index.html
+++ b/app/index.html
@@ -33,15 +33,16 @@
               <span class="icon-bar"></span>
             </button>
 
-            <a class="navbar-brand" href="#/">Torrent Subscriber</a>
+            <a class="navbar-brand" href="/">Torrent Subscriber</a>
           </div>
 
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
             <ul class="nav navbar-nav">
-              <li ng-repeat="page in pages" ng-class="{'active':isCurrent(page.path)}">
+              <li ng-if="isLoggedIn()" ng-repeat="page in pages" ng-class="{'active':isCurrent(page.path)}">
                   <a ng-click="go(page.path)">{{page.title}}</a>
               </li>
+              <li ng-if="isLoggedIn()"><a ng-click="logout()">Logout</a></li>
             </ul>
           </div>
         </div>
@@ -102,6 +103,9 @@
     <script src="scripts/services/socket.js"></script>
     <script src="scripts/services/file.js"></script>
     <script src="scripts/controllers/files.js"></script>
+    <script src="scripts/services/auth-interceptor.js"></script>
+    <script src="scripts/services/user.js"></script>
+    <script src="scripts/controllers/login.js"></script>
     <!-- endbuild -->
 </body>
 </html>
